--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,7 +1,35 @@
 <html>
 <head>
   <title>{{ TITLE }}</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
+  <style>
+    html, body {
+      padding: 0;
+      margin: 0;
+      background: #000;
+      color: #fff;
+    }
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      max-height: 100vh;
+    }
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding: 1em;
+      box-sizing: border-box;
+    }
+    img {
+      width: auto;
+      height: 100%;
+      border: 1px solid #444;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
   <main>
